<resources>
    <string name="app_name">Meal Booking</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to book  your favourite meal!</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="register_account">Touch Here to Register?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="join_m_booking_absolutely_for_free">Join M-Booking absolutely for free</string>
    <string name="first_name">First Name…</string>
    <string name="second_name">Second Name…</string>
    <string name="email">Email…</string>
    <string name="phone">Phone (+254) 7 ....</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account_login">Already Have an Account? Login</string>
    <string name="my_account">My Account</string>
    <string name="cart">Cart</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="title_activity_dish_details">Dish Details</string>
    <string name="action_settings">Settings</string>
    <string name="product_title">Product Title</string>
    <string name="dish_remaining_for_10_people">Dish remaining for %s people</string>
    <string name="ksh_0_00">Ksh. 0.00 KES</string>
    <string name="total">Grand Total:</string>
    <string name="proceed_to_checkout">Checkout</string>
    <string name="m_pesa_payment_method">M-Pesa Payment Method</string>
    <string name="mpesa_mobile_no">Enter Mobile No e.g. 07 … …</string>
    <string name="submit">Pay</string>
    <string name="add_new_meals">Add New Meals</string>
    <string-array name="qty">
        <item>Choose Quantity</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string name="title_activity_chef">ChefActivity</string>
    <string name="meal_name">Meal Name</string>
    <string name="add_new_meal">Add New Meal</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
</resources>
