<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_plate"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/app_name" />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:background="@drawable/custom_fields"
                android:drawableLeft="@drawable/ic_account_circle_white_24dp"
                android:textSize="20sp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:drawablePadding="5dp"
                android:padding="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:inputType="text"
                android:id="@+id/username"
                android:layout_marginBottom="0dp"
                android:drawableStart="@drawable/ic_account_circle_white_24dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:background="@drawable/custom_fields_2"
                android:drawableLeft="@drawable/ic_vpn_key_white_24dp"
                android:textSize="20sp"
                android:drawablePadding="5dp"
                android:padding="@dimen/activity_horizontal_margin"
                android:textColor="@color/white"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_marginBottom="0dp"
                android:drawableStart="@drawable/ic_vpn_key_white_24dp" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="login"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_btn"
                android:text="@string/sign_in"
                android:textColor="#ffffff"
                android:padding="@dimen/activity_vertical_margin"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>